# TS4H2022

./: .gitignore  README.md  pyproject.toml  regression_train.py  requirements.txt  setup.sh
configs/: config01.yaml
dataset/: .gitignore  README.md
scripts/: .gitignore  README.md  clean_zip.py
src/timebase/data/: filter_data.py  preprocessing.py  reader.py  static.py  utils.py
src/timebase/models/: __init__.py  bilstm.py  embedding.py  mlp.py  registry.py  transformer.py  utils.py
src/timebase/utils/: early_stopping.py  h5.py  metrics.py  optimizer.py  tensorboard.py  utils.py  yaml.py
